fix(styles): use percentage instead of vh to prevent whole screen overflowing

--- a/src/app/screens/about/about.scss
+++ b/src/app/screens/about/about.scss
@@ -10,7 +10,7 @@ $section-padding: 20px;
 }
 
 .about-background-image {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   background: linear-gradient(-45deg, var(--theme-background) 0%, #0F2233 60%, rgba(26,186,186,0.15) 100%);
   background-size: cover;
