--- a/src/app/screens/home/home.scss
+++ b/src/app/screens/home/home.scss
@@ -8,7 +8,7 @@
 }
 
 .home-background-image {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   background: linear-gradient(135deg, var(--theme-background) 0%, #0F2233 60%, rgba(26,186,186,0.15) 100%);
   background-size: cover;
